# anolisa

./: .gitignore  AGENTS.md  CHANGELOG.md  CHANGELOG_zh.md  CONTRIBUTING.md  CONTRIBUTING_zh.md  README.md  README_zh.md
src/agentsight/crates/agentsight-opt/: Cargo.toml
src/agentsight/crates/agentsight-opt/prompts/: confirm_before_act.md  cost_identification.md  experience_library.md  perf_identification.md  requirement_coverage.md  shared_extract.md
src/agentsight/crates/agentsight-opt/src/: accuracy.rs  atif.rs  cost.rs  lib.rs  llm.rs  perf.rs  pipeline.rs  trace.rs  types.rs
src/anvil/: Cargo.toml  README.md  rust-toolchain.toml
src/anvil/crates/anvil/: Cargo.toml
src/anvil/crates/anvil-core/src/: backend.rs  config.rs  error.rs  lifecycle.rs  policy.rs  pool.rs  template.rs
src/anvil/crates/anvil/src/: api.rs  cli.rs  daemon.rs  main.rs  metrics.rs  spawner.rs  state.rs
src/anvil/examples/: config.toml
src/anvil/examples/policies/: agent-rl.toml  agent-tool.toml
src/anvil/manifests/: anvil.toml
src/benchmark/claweval-runner/: .gitignore  README.md  README_zh.md  pyproject.toml
src/benchmark/claweval-runner/scripts/: analyze.py  check_api_key.py  check_judge_multimodal.py  check_openclaw_env.py  compare_session_trace_tokens.py  configure_model.py  configure_openclaw.py  debug_task.py  generate_trial_reports.py  list_tasks.py  prompt_task.py  run_integration_test.py  run_task_compare.py  setup_env.py  summarize_results.py  task_index_map.py
src/benchmark/claweval-runner/src/ce_runner/: __init__.py  __main__.py  _common.py  agent.py  batch_runner.py  grader_runner.py  infra.py  mcp_mock_services.py  mcp_sandbox_tools.py  parallel.py  pipeline.py  preflight.py  run_task.py  sandbox.py  sandbox_helpers.py  session_trace_converter.py  skill_generator.py  tool_injector.py
src/benchmark/claweval-runner/tests/: conftest.py  helpers.py  test_agent_execution.py  test_agent_process_group.py  test_api_key_script.py  test_atomic_config_write.py  test_audit_data_isolation.py  test_batch_aggregation.py  test_batch_output_format.py  test_check_judge_multimodal.py  test_cleanup_config.py  test_cli_args.py  test_config_input_modalities.py  test_config_validation.py  test_discover_tasks.py  test_e2e_integration.py  test_ensure_linger.py  test_environment.py  test_error_handling.py  test_gateway_env.py  test_infra.py  test_kill_mcp_bridges.py  test_log_timestamp.py  test_mcp_sandbox_tools.py  test_mcp_schema_types.py  test_mcp_server_key_truncation.py  test_pipeline.py  test_preflight.py  test_reap_orphans.py  test_session_trace_converter.py  test_setup_check.py  test_task_index_map.py  test_task_scores.py  test_tool_injector.py  test_tool_isolation.py  test_trace_timestamps.py
src/benchmark/swe-runner/: .gitignore  README.md  README_zh.md  pyproject.toml
src/benchmark/swe-runner/src/swe_runner/: __init__.py  cli.py  cli_commands.py
src/benchmark/swe-runner/tests/: conftest.py
src/benchmark/swe-runner/tests/integration/: test_single_instance.py
src/benchmark/swe-runner/tests/unit/: __init__.py
src/blaze/crates/blaze-core/: Cargo.toml
src/blaze/crates/blaze-core/src/: backend.rs  config.rs  error.rs  kernel.rs  lib.rs  lifecycle.rs  policy.rs  storage.rs  template.rs
src/blaze/crates/blazed/: Cargo.toml
src/blaze/crates/blazed/src/: api.rs  cli.rs  daemon.rs  error.rs  file_provider.rs  main.rs  metrics.rs  spawner.rs  state.rs
src/cosh-ng/: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING_zh.md  Cargo.toml  README.md  README_CN.md  README_zh.md  component.toml  cosh-ng.spec.in  docs
src/cosh-ng/crates/cosh-cli/: Cargo.toml
src/cosh-ng/crates/cosh-cli/src/: main.rs
src/cosh-ng/crates/cosh-cli/tests/: cli_integration.rs
src/cosh-ng/crates/cosh-core/: Cargo.toml
src/cosh-ng/crates/cosh-core/src/: audit.rs  auth.rs  cli.rs  compaction.rs  config.rs  context.rs  core.rs  credential.rs  headless.rs  hook.rs  lib.rs  logging.rs  loop_detect.rs  main.rs  metrics.rs  migrate.rs  process.rs  protocol.rs  redaction.rs  registry.rs  session.rs  session_control.rs  sls.rs  state.rs
src/cosh-ng/crates/cosh-core/tests/: cli_tools.rs  compaction_lifecycle.rs  core_version.rs  jsonl_protocol.rs  oauth_mcp.rs  registry_protocol.rs  session_recovery.rs  sigint.rs  sls_integration.rs  tool_approval.rs
src/cosh-ng/crates/cosh-platform/: Cargo.toml
src/cosh-ng/crates/cosh-platform/src/: audit.rs  checkpoint.rs  detect.rs  lib.rs  pkg.rs  process.rs  svc.rs  validate.rs
src/cosh-ng/crates/cosh-shell/: Cargo.toml  README.md
src/cosh-ng/crates/cosh-shell/scripts/: check-layout.sh  inventory-public-api.sh  inventory-tests.sh
src/cosh-ng/crates/cosh-shell/src/: activity_runtime.rs  adapter.rs  agent_render.rs  agent_run_runtime.rs  approval_actions.rs  approval_runtime.rs  approved_tool_runtime.rs  builtin_hooks.rs  command_hook_runtime.rs  config.rs  context_window.rs  details_runtime.rs  exit_classify.rs  failed_command_runtime.rs  governance.rs  hook_engine.rs  hook_types.rs  input.rs  intercept_runtime.rs  journal.rs  ledger.rs  lib.rs  logging.rs  main.rs  main_cli.rs  mode_runtime.rs  parser.rs  question_runtime.rs  raw_input.rs  recommendation_runtime.rs  runtime_state.rs  shell_host.rs  slash_registry.rs  slash_runtime.rs  startup_runtime.rs  terminal_output.rs  tool_broker.rs  types.rs
src/cosh-ng/crates/cosh-shell/tests/: logic.rs  (+10 more)
src/cosh-ng/crates/cosh-tui/: Cargo.toml
src/cosh-ng/crates/cosh-types/: Cargo.toml
src/cosh-ng/docs/adr/: ADR-009-audit-event-segment-and-sls-contract.md  ADR-010-audit-operations-retention-and-export-policy.md
src/cosh-ng/docs/design/: audit-log.md  interactive-session-recovery-development-prompt.md  interactive-session-recovery-plan.md
src/cosh-ng/docs/spec/: audit-log-spec.md
src/ktuner/: CHANGELOG.md  Cargo.toml  README.md
src/ktuner/src/: category.rs  lib.rs  services.rs
src/ktuner/src/bench/: mod.rs
src/ktuner/src/detect/: mod.rs
src/ktuner/src/profile/: mod.rs
src/ktuner/src/rules/: mod.rs
src/ktuner/src/tuner/: mod.rs
src/tokenless/crates/tokenless-ccr/: Cargo.toml
(+1844 files in other folders)
