[workspace]
members = [
    "crates/cosh-types",
    "crates/cosh-platform",
    "crates/cosh-cli",
    "crates/cosh-core",
    "crates/cosh-shell",
]
resolver = "2"

[workspace.package]
version = "0.12.0"
edition = "2021"
rust-version = "1.74"
license = "Apache-2.0"
repository = "https://github.com/alibaba/anolisa"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false }
bincode = "1"
clap = { version = "4", features = ["derive"] }
which = "7"
toml = "0.8"
regex = "1"
sha2 = "0.10"
nix = { version = "0.29", default-features = false, features = ["user"] }
rustix = { version = "0.38", default-features = false, features = ["fs", "std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
signal-hook = "0.3"
getrandom = "0.2"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
