[package]
name = "ktuner"
version = "0.1.0"
edition = "2021"
description = "Deterministic kernel-tuning engine for ANOLISA agents"
license = "Apache-2.0"

[lib]
name = "ktuner_engine"
path = "src/lib.rs"

[[bin]]
name = "ktuner"
path = "src/bin/ktuner.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
colored = "2"
clap = { version = "4", features = ["derive"] }
